--- a/Monitoring Scripts NSClient/nsclient.ini
+++ b/Monitoring Scripts NSClient/nsclient.ini
@@ -1,4 +1,4 @@
-﻿# If you want to fill this file with all avalible options run the following command:
+# If you want to fill this file with all avalible options run the following command:
 #   nscp settings --generate --add-defaults --load-all
 # If you want to activate a module and bring in all its options use:
 #   nscp settings --activate-module <MODULE NAME> --add-defaults
@@ -162,6 +162,9 @@ check_storage_pool = check_storage_pool.ps1
 
 [/settings/external scripts/wrapped scripts]
 check_hyperv_replica = Check-HyperVReplica.ps1
+
+[/settings/external scripts/wrapped scripts]
+check_csv_freespace = check_csv_freespace.ps1 -n $ARG1$ -w $ARG2$ -c $ARG3$
 
 [/settings/external scripts/server] 
 allow arguments=true
