--- a/cloud-init/cloud-init-centos7.conf
+++ b/cloud-init/cloud-init-centos7.conf
@@ -6,6 +6,7 @@ echo "Resizing disk to maximum size..."
 /usr/sbin/lvextend -l +100%FREE /dev/mapper/centos-root
 /usr/sbin/resize2fs /dev/mapper/centos-root
 
+echo "Setting up hostname..."
 sed -i '/set_hostname/d' /etc/cloud/cloud.cfg
 sed -i '/update_hostname/d' /etc/cloud/cloud.cfg
 sed -i 's/.novalocal//g' /etc/hosts
@@ -14,8 +15,13 @@ HOSTNAME=$(/usr/bin/cat /etc/hostname)
 echo $HOSTNAME > /etc/hostname
 hostnamectl set-hostname $HOSTNAME
 hostname $HOSTNAME
+
+echo "Updating the system..."
+/usr/bin/yum -y update
+
 if [ -f /scripts/cust-deploy.sh ]
   then
     echo "Post-Configuring cPanel..."
 	/scripts/cust-deploy.sh
+	/scripts/upcp --force
 fi
